Lista de series favoritas

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CARLOS RAMIREZ</title>
+    <title>HTML SEMANTICO</title>
 </head>
 <link rel="stylesheet" href="index.css">
 
 <body>
-    <P class="titulo1">CONSOLA LINUX MODIFICADO</P>
-    <P class="titulo1">CARLOS RAMIREZ</P>
-    <P class="titulo1">67000004</P>
-    <img src="Consola_Linux.jpg" alt="">
+    <h1>SERIES FAVORITAS</h1>
+    <ol>
+        <li>Wanda Vision</li>
+        <li>Black Mirror</li>
+        <li>Breaking Bad</li>
+        <li>Mr. Robot</li>
+    </ol>
 </body>
 </html>
