--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <li>Black Mirror</li>
         <li>Breaking Bad</li>
         <li>Mr. Robot</li>
-        <li>Games Og Thrones</li>
+        <li>Games Of Thrones</li>
+        <li>Star Wars</li>
     </ol>
 </body>
 </html>
