Agregamos formulario semantico

--- a/index.html
+++ b/index.html
@@ -9,18 +9,41 @@
 <link rel="stylesheet" href="index.css">
 
 <body>
-    <h1>SERIES FAVORITAS</h1>
-    <ol>
-        <li>Wanda Vision</li>
-        <li>Black Mirror</li>
-        <li>Breaking Bad</li>
-        <li>Mr. Robot</li>
-        <li>Games Of Thrones</li>
-        <li>Star Wars</li>
-        <li>The Boys</li>
-        <li>Iron Fist</li>
-        <li>Pocoyo</li>
-        <li>7DS</li>
-    </ol>
+    <form action="">
+        <label for="nombre" ></label>
+        <span>Digite Nombre</span>
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellidos" required>
+        <br></br>
+
+        <label for="telefono"></label>
+        <span>Digite Telefono</span>
+        <input type="number" name="telfono" id="telfono" placeholder="Telefono" required>
+        <br></br>
+
+        <label for="direccion"></label>
+        <span>Digite Direccion</span>
+        <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
+        <br></br>
+
+        <label for="fecha_nacimiento"></label>
+        <span>Digite Fecha de Nacimiento</span>
+        <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" placeholder="Fecha de Nacimiento" required>
+        <br></br>
+
+        <label for="correo_electronico"></label>
+        <span>Digite Correo Electronico</span>
+        <input type="email" name="correo_electronico" id="correo_electronico" placeholder="Correo Electronico" required>
+        <br></br>
+
+        <label for="contrasena"></label>
+        <span>Digite Contraseña</span>
+        <input type="password" name="contrasena" id="contrasena" placeholder="Contraseña" required>
+        <br></br>
+
+        <label for="confirmar_contrasena"></label>
+        <span>Confirme Contraseña</span>
+        <input type="password" name="confirmar_contrasena" id="confirmar_contrasena" placeholder="Confirmar Contraseña" required>
+        <br></br>
+    </form>
 </body>
 </html>
