modificamos el index

--- a/index.html
+++ b/index.html
@@ -4,46 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>HTML SEMANTICO</title>
 </head>
-<link rel="stylesheet" href="index.css">
 
 <body>
-    <form action="">
-        <label for="nombre" ></label>
-        <span>Digite Nombre</span>
-        <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellidos" required>
-        <br></br>
-
-        <label for="telefono"></label>
-        <span>Digite Telefono</span>
-        <input type="number" name="telfono" id="telfono" placeholder="Telefono" required>
-        <br></br>
-
-        <label for="direccion"></label>
-        <span>Digite Direccion</span>
-        <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
-        <br></br>
-
-        <label for="fecha_nacimiento"></label>
-        <span>Digite Fecha de Nacimiento</span>
-        <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" placeholder="Fecha de Nacimiento" required>
-        <br></br>
-
-        <label for="correo_electronico"></label>
-        <span>Digite Correo Electronico</span>
-        <input type="email" name="correo_electronico" id="correo_electronico" placeholder="Correo Electronico" required>
-        <br></br>
-
-        <label for="contrasena"></label>
-        <span>Digite Contraseña</span>
-        <input type="password" name="contrasena" id="contrasena" placeholder="Contraseña" required>
-        <br></br>
-
-        <label for="confirmar_contrasena"></label>
-        <span>Confirme Contraseña</span>
-        <input type="password" name="confirmar_contrasena" id="confirmar_contrasena" placeholder="Confirmar Contraseña" required>
-        <br></br>
+    <h1>Formulario Semantico</h1>
+    <form action="page">
+        <section class="formulario">
+            <label for="nombre" ></label>
+            <span class="">Digite Nombre</span>
+            <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellidos" required>
+            <br><br>
+            <label for="telefono"></label>
+            <span>Digite Telefono</span>
+            <input type="number" name="telefono" id="telefono" placeholder="Telefono" required>
+            <br><br>
+            <label for="direccion"></label>
+            <span>Digite Direccion</span>
+            <input type="text" name="direccion" id="direccion" placeholder="Direccion" required>
+            <br><br>
+            <label for="fecha_nacimiento"></label>
+            <span>Digite Fecha de Nacimiento</span>
+            <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" required>
+            <br><br>
+            <label for="correo_electronico"></label>
+            <span>Digite Correo Electronico</span>
+            <input type="email" name="correo_electronico" id="correo_electronico" placeholder="Correo Electronico" required>
+            <br><br>
+            <label for="contrasena"></label>
+            <span>Digite Contraseña</span>
+            <input type="password" name="contrasena" id="contrasena" placeholder="Contraseña" required>
+            <br><br>
+            <label for="confirmar_contrasena"></label>
+            <span>Confirme Contraseña</span>
+            <input type="password" name="confirmar_contrasena" id="confirmar_contrasena" placeholder="Confirmar Contraseña" required>
+            <br><br>
+            <input type="button" class="buttom" value="Registrar">
+            <br><br>
+        </section>
     </form>
 </body>
 </html>
