Agregamos el estilo css al formulario

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>HTML SEMANTICO</title>
 </head>
 
-<body>
-    <h1>Formulario Semantico</h1>
+<body>  
     <form action="page">
-        <section class="formulario">
+        <section class="Formulario">
+            <h1>Formulario Semantico</h1>
+            <br><br>
             <label for="nombre" ></label>
             <span class="">Digite Nombre</span>
             <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellidos" required>
@@ -40,7 +41,7 @@
             <span>Confirme Contraseña</span>
             <input type="password" name="confirmar_contrasena" id="confirmar_contrasena" placeholder="Confirmar Contraseña" required>
             <br><br>
-            <input type="button" class="buttom" value="Registrar">
+            <input type="submit" class="boton" value="Registrar">
             <br><br>
         </section>
     </form>
