--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
             <br><br>
         </section>
     </form>
+    <script type="text/javascript" src="/index.js"></script>
 </body>
+
 </html>
